--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,32 @@
 /* TODO Add site wide styles */
+@font-face {
+    font-family: "Amazon Ember";
+    font-weight: 400;
+    src: url('https://d1irxr40exwge2.cloudfront.net/AmazonEmber_Rg.ttf');
+}
+
+@font-face {
+    font-family: "Amazon Ember";
+    font-weight: 500;
+    src: url('https://d1irxr40exwge2.cloudfront.net/Amazon-Ember-Medium.ttf');
+}
+
+@font-face {
+    font-family: "Amazon Ember";
+    font-weight: 700;
+    src: url('https://d1irxr40exwge2.cloudfront.net/AmazonEmber_Bd.ttf');
+}
+
+* {
+
+    font-family: "Amazon Ember", Arial, sans-serif;
+}
+
+a {
+    color: #0066c0;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: #c45500;
+}
