addedd navigation panel styling

--- a/frontend/src/components/SignupFormPage/SignUpForm.css
+++ b/frontend/src/components/SignupFormPage/SignUpForm.css
@@ -85,8 +85,10 @@
 }
 
 .signup-form-errors {
+    display: block;
     color: red;
     margin-bottom: 20px;
+    font-size: 10px;
 }
 
 .signup-form-button {
