--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -9,13 +9,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: fit-content
+    height: fit-content;
+
 }
 
 .login-form > h1 {
     display: block;
     justify-content: flex-start;
-    width: 100%;
+    /* width: 100%; */
     font-weight: 100;
     font-size: 30px;
     margin-bottom: 10px;
@@ -29,6 +30,7 @@
     border-radius: 4px;
     border: 1px solid lightgray;
 }
+
 
 .login-form-label {
     display: flex;
@@ -63,14 +65,16 @@
 }
 .login-form-errors {
     color: red;
+    display: block;
     margin-bottom: 20px;
+    font-size: 14px;
 }
 
 .login-form-button
             {
     margin-bottom: 26px;
     margin-top: 30px;
-    width: 100%;
+    /* width: 100%; */
     background-image: linear-gradient(rgb(247, 223, 165), rgb(240, 193, 75));
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
@@ -157,9 +161,6 @@
     margin-top: -1px;
 }
 
-.error {
-    margin-bottom: 10px !important;
-}
 
 .terms {
     font-size: 12px;
@@ -169,12 +170,9 @@
     color: #111111;
     font-size: 13px;
     line-height: 29px;
-
     background: linear-gradient(0deg, #e7e9ec 0%, #f6f7f9 100%);
-
     border: 1px solid #adb1b8;
     border-radius: 3px;
-
     cursor: pointer;
 }
 
@@ -194,7 +192,7 @@
 }
 
 .footer-line {
-    width: 100%;
+    width: 900%;
     height: 14px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, .14), rgba(0, 0, 0, .03) 3px, transparent);
 }
