--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -10,13 +10,12 @@
     flex-direction: column;
     align-items: center;
     height: fit-content;
-
+    /* max-width: 1000px; */
 }
 
 .login-form > h1 {
     display: block;
     justify-content: flex-start;
-    /* width: 100%; */
     font-weight: 100;
     font-size: 30px;
     margin-bottom: 10px;
