--- a/frontend/src/components/CategoryBar/CategoryBar.css
+++ b/frontend/src/components/CategoryBar/CategoryBar.css
@@ -1,18 +1,21 @@
 
 .category-bar-container {
     width: 100%;
-    height: 100px;
+    /* height: 10px; */
     min-width: 1400px;
     background-color: #232F3E;
+    padding-bottom: 10px;
     z-index: 4;
+    /* position: relative; */
 }
 
 .category-links {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     height: 100%;
     margin-left: 10px;
+    padding-top: 3px;
     overflow: hidden;
     color: white;
 }
