--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -2,13 +2,13 @@
 
 .header {
     width: 100%;
-    min-width: 1400px;
+    min-width: 1200px;
     max-height: 70px;
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: #131921;
-    position: absolute;
+    position: relative;
 
 }
 /* HORIZON LOGO */
