--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -1,67 +1,13 @@
-
-
-.wrapper {
+.homepage-container {
     display: flex;
-    flex-direction: column;
-
-    width: 350px;
-    height: 420px;
-
-    background-color: white;
-    z-index: 3;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+    
+    
 }
 
-.content {
-    padding-top: 20px;
-    padding-left: 20px;
-}
-
-.heading {
-    font-size: 21px;
-    line-height: 1.3em;
-    font-weight: 700;
-
-    margin-bottom: 15px;
-}
-
-.card-links {
-    color: #0F1111;
-}
-
-.card-links:hover {
-    color: #0F1111;
-    text-decoration: none;
-}
-
-
-.grid {
-    display: flex;
-    gap: 10px;
-}
-
-
-.tile {
-    width: 150px;
-}
-
-.tile:hover {
-    text-decoration: none;
-}
-
-.card-image {
-    height: 10px;
-    width: 50px;
-    object-fit: scale-down;
-}
-
-.card-title {
-    width: 100%;
-
-    font-size: 13px;
-    line-height: 1.3em;
-    color: #0F1111;
-
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.grid-container {
+font-size: 50px;
+padding: 20px;
+box-sizing: border-box;
 }
