--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -1,13 +1,87 @@
 .homepage-container {
+    background: #eaeded;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
     flex-wrap: wrap;
-    
-    
+}
+.carousel {
+    width: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.grid-container {
-font-size: 50px;
-padding: 20px;
-box-sizing: border-box;
+.card-container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 400px;
+    width: 380px;
+    background-color: white;
+    box-shadow: 0px 15px 35px #888888;
+    margin: 50px 20px;
+    transition: all 0.5s ease-in-out;
+    top: -300px;
+
 }
+
+.grid-box {
+    position: relative;
+    z-index: 0;
+    height: 350px;
+    padding: 20px 10px 0;
+    margin: 25px 10px;
+    background-color: white;
+    width: 320px;
+
+}
+
+.grid-image-label {
+    font-size: 13px;
+    padding-top: 5px;
+    color: #333;
+    text-align: center;
+    transition: all 0.5s ease-in-out;
+}
+
+
+.card-label {
+    font-weight: bold;
+    font-size: 21px;
+    color: black;
+}
+
+
+.card-image-container {
+    height: 275px;
+    margin-top: 22px;
+    margin-bottom: 44px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.grid-box-image {
+    width: 40%;
+    height: 40%;
+
+}
+
+.grid-box-image a {
+    text-decoration: none;
+}
+
+.grid-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: all 0.5s ease-in-out;
+}  
+
