--- a/frontend/src/components/Products/ProductShowPage/ProductShowPage.css
+++ b/frontend/src/components/Products/ProductShowPage/ProductShowPage.css
@@ -11,7 +11,7 @@
 
 .product-img-container  {
     margin-left: 10%;
-    width: 20%;
+    width: 10%;
     height: 30%;
     max-height: 100%;
     max-width: 100%;
@@ -21,7 +21,7 @@
 
 .product-img-container > img {
         max-width: 200%;
-        /* height: auto; */
+        height: auto;
 }
 
 .product-middle-container {
@@ -111,7 +111,6 @@ hr {
     line-height: 20px;
     padding-left: 18px;
     color: rgb(15, 17, 17);
-    /* word-break: break-all; */
     font-size: 14px;
     list-style-type: disc;
 }
@@ -261,4 +260,7 @@ line-height: 24px;
 .fullfillment3 {
     color: #007185;
     margin-left: 32px;
-}
+} 
+
+
+
