--- a/frontend/src/components/Products/ProductsIndex/ProductIndex.css
+++ b/frontend/src/components/Products/ProductsIndex/ProductIndex.css
@@ -24,46 +24,44 @@
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .09), 0 1px 2px rgba(0, 0, 0, .13);
     margin-bottom: 30px;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
     width: calc(33.33% - 20px);
 }
 
-.product-card__image {
-    height: 300px;
-    /* overflow: hidden; */
+.product-card-image {
+    height: 100px;
+    overflow: hidden;
 }
 
-.product-card__image img {
+.product-card-image img {
     display: block;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
 }
 
-.product-card__info {
+.product-card-info {
     padding: 20px;
 }
 
-.product-card__name {
-    font-size: 18px;
+.product-card-name {
+    font-size: 14px;
     font-weight: 400;
     margin-bottom: 10px;
+    text-decoration: none;
+    color: black;
 }
 
-.product-card__description {
-    font-size: 16px;
-    margin-bottom: 10px;
-}
 
-.product-card__price {
+.product-card-price {
     color: #B12704;
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-.product-card__button {
+.product-card-button {
     background-color: #f0c14b;
     border: none;
     border-radius: 4px;
@@ -77,6 +75,6 @@
     width: 100%;
 }
 
-.product-card__button:hover {
+.product-card-button:hover {
     background-color: #ddb347;
 }
