--- a/frontend/src/components/Carousel/Carousel.css
+++ b/frontend/src/components/Carousel/Carousel.css
@@ -1,15 +1,29 @@
+.carousel {
+    margin: 0 auto;
+    width: 100%;
+}
 
-
+.slick-slide img {
+    width: 100%;
+    height: auto;
+}
 
 .slick-prev:before,
 .slick-next:before {
-    color: gray;
-    font-size: 50px;
+    color: #555555;
+    font-size: 33px;
 }
 
+.slick-prev {
+    left: -33px;
+}
+/* .slick-dots {
+    bottom: -45px;
+}
 
-/* .slick-dots li button:before {
+.slick-dots li button:before {
     color: black;
+    font-size: 10px;
 } */
 
 @media (max-width: 768px) {
