--- a/frontend/src/components/Products/ProductsIndex/ProductItem/ProductItem.css
+++ b/frontend/src/components/Products/ProductsIndex/ProductItem/ProductItem.css
@@ -1,6 +1,4 @@
-
-
-/* .all-products-container {
+.all-products-container {
     margin: 0 auto;
     max-width: 1200px;
     padding: 40px 20px;
@@ -78,4 +76,4 @@
 
 .product-card-button:hover {
     background-color: #ddb347;
-} */
+}
