--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -72,11 +72,6 @@
     margin: 5px;
 }
 
-.header-search:hover {
-    outline: none;
-    box-shadow: 0 0 0 2px #f90, 0 0 0 3px rgb(255 153 0 / 50%);
-}
-
 .header-search-input {
     height: 12px;
     padding-top: 14px;
@@ -118,13 +113,17 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    /* border: 1px; */
 }
     
 .header-greeting {
     font-size: 12px;
     line-height: 14px;
     font-weight: 400;
+}
+
+.header-user-content > a {
+    text-decoration: none;
+    color: white;
 }
 
 .signIn-signOut-button {
@@ -161,7 +160,19 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 5;
 }
-
+.dropdown-logout {
+    position: absolute;
+    top: 54px;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 5;
+}
 .your-account {
     color: #0F1111;
     font-size: 16px;
@@ -173,6 +184,9 @@
     font-size: 13px;
     color: #444444;
     font-weight: 400;
+}
+.your-account > a {
+text-decoration: none;
 }
 .dropdown__menu {
     display: flex;
@@ -281,63 +295,52 @@ border: 1px solid transparent;
 }
 
 
+/* test */
 
-/* CHAT GPT */
-
-.header-nav {
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-.header-option {
+.dropdown-right-container {
     display: flex;
     flex-direction: column;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: #fff;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.header-option1 {
-    font-weight: 700;
-}
-
-.header-link {
-    display: flex;
+    justify-content: center;
     align-items: center;
+    width: 50%;
+}
+
+.dropdown-signin-button,
+.dropdown-demo-login-button {
+    font-size: 13px;
+    margin-bottom: 13px;
+    width: 80%;
+    background-image: linear-gradient(to bottom, #f8e3ad, #eeba37);
+    border-color: #c89411 #b0820f #99710d;
+    color: #111;
+    border-style: solid;
+    border-width: 1px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    text-align: center;
     text-decoration: none;
-    color: #fff;
+    height: 33px;
+    border-radius: 2px;
 }
 
-.header-dropdown {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 100%;
-    margin-left: auto;
-    margin-right: 20px;
+.dropdown-signin-button:hover,
+.dropdown-demo-login-button:hover {
+    background: linear-gradient(to bottom, #f6da95, #ecb21f);
 }
 
-.header-dropdown-toggle {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    color: #fff;
-    font-size: 14px;
-    cursor: pointer;
+.dropdown-signup-label {
+    text-align: center;
+    font-size: 11px;
+    color: #333;
+    margin: 2px 0 9px 0;
 }
 
-.header-dropdown-option1 {
-    font-weight: 700;
-}
-
-.header-dropdown-option2 {
-    margin-left: 5px;
-}
-
-.fa-caret-down,
-.fa-caret-up {
-    margin-left: 5px;
+.dropdown-signup-link {
+    font-size: 11px;
+    text-decoration: none;
+    color: #05a;
+    display: inline;
 }
