--- a/frontend/src/components/Products/ProductsIndex/ProductIndex.css
+++ b/frontend/src/components/Products/ProductsIndex/ProductIndex.css
@@ -1,6 +1,4 @@
-
-
-/* .all-products-container {
+.all-of-products-container {
     margin: 0 auto;
     max-width: 1200px;
     padding: 40px 20px;
@@ -12,7 +10,7 @@
     margin-bottom: 20px;
 }
 
-.all-products {
+.all-the-products {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -21,61 +19,7 @@
     padding: 0;
 }
 
-.product-card {
-    background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .09), 0 1px 2px rgba(0, 0, 0, .13);
-    margin-bottom: 30px;
-    position: relative;
-    width: calc(33.33% - 20px);
-}
-
-.product-card-image {
-    height: 100px;
+.product-cards {
+    width: 380px;
     overflow: hidden;
 }
-
-.product-card-image img {
-    display: block;
-    height: 100%;
-    object-fit: contain;
-    width: 100%;
-}
-
-.product-card-info {
-    padding: 20px;
-}
-
-.product-card-name {
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: black;
-}
-
-
-.product-card-price {
-    color: #B12704;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.product-card-button {
-    background-color: #f0c14b;
-    border: none;
-    border-radius: 4px;
-    color: #111;
-    cursor: pointer;
-    display: block;
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 20px;
-    padding: 10px;
-    width: 100%;
-}
-
-.product-card-button:hover {
-    background-color: #ddb347;
-} */
