--- a/frontend/src/components/Products/ProductsIndex/ProductItem/ProductItem.css
+++ b/frontend/src/components/Products/ProductsIndex/ProductItem/ProductItem.css
@@ -1,3 +1,5 @@
+
+
 .all-products-container {
     margin: 0 auto;
     max-width: 1200px;
@@ -21,16 +23,23 @@
 
 .product-card {
     background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .09), 0 1px 2px rgba(0, 0, 0, .13);
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 30px;
     position: relative;
-    width: calc(33.33% - 20px);
+    width: 380px;
+    overflow: hidden;
+}
+
+.product-card:hover {
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
 .product-card-image {
-    height: 100px;
+    height: 200px;
     overflow: hidden;
+    position: relative;
+    padding: 20px;
 }
 
 .product-card-image img {
@@ -45,17 +54,21 @@
 }
 
 .product-card-name {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 10px;
     text-decoration: none;
-    color: black;
+    color: #111;
 }
 
+.product-card-name:hover {
+    color: #007185;
+    text-decoration: underline;
+}
 
 .product-card-price {
-    color: #B12704;
-    font-size: 18px;
+    color: #b12704;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -63,7 +76,7 @@
 .product-card-button {
     background-color: #f0c14b;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     color: #111;
     cursor: pointer;
     display: block;
@@ -72,8 +85,15 @@
     margin-top: 20px;
     padding: 10px;
     width: 100%;
+    transition: all 0.2s ease-in-out;
 }
 
 .product-card-button:hover {
     background-color: #ddb347;
+    transform: scale(1.05);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); 
 }
+
+.product-card-button:focus {
+    outline: none;
+}  
