--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -10,3 +10,9 @@
     margin-bottom: 14px;
     margin-top: 30px;
 }
+
+.customer-review-label {
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 400;
+}
