--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -153,8 +153,8 @@
     display: flex;
     flex-direction: column;
     width: 165px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px; 
     border-radius: 3px;
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -194,7 +194,6 @@ text-decoration: none;
     align-items: center;
     gap: 8px;
 }
-
 .dropdown-up-arrow {
     position: absolute;
     top: 46px;
@@ -206,7 +205,8 @@ text-decoration: none;
     border-bottom: 8px solid white;
 }
 
-.background {
+
+/* .background {
     position: fixed;
     top: 60px;
     left: 0px;
@@ -214,8 +214,7 @@ text-decoration: none;
     width: 100vw;
     height: 100vh;
     z-index: 4;
-}
-
+} */
 
 /* RETURN AND ORDERS BUTTON */
 .header-return-and-orders{
@@ -261,6 +260,16 @@ font-weight: 400;
     font-weight: 700;
 }
 
+.large-count {
+    position: absolute;
+    margin-left: 15px;
+    margin-top: -2px;
+
+    font-size: 15px;
+    line-height: 16px;
+    font-weight: 700;
+    color: #f08804;
+}
 .header-cart-label {
     align-self: flex-end;
     font-size: 14px;
@@ -342,3 +351,4 @@ border: 1px solid transparent;
     color: #05a;
     display: inline;
 }
+
