--- a/frontend/src/components/CartItems/CartIndex.css
+++ b/frontend/src/components/CartItems/CartIndex.css
@@ -1,19 +1,19 @@
-@import url("https://fonts.cdnfonts.com/css/amazon-ember");
 
 .cart-heading {
     margin: 20px;
     font-size: 28px;
 }
 
-.cart-backgound-container
+.cart-bg-container
 {
     margin-top: 2%;
-    width: 60%;
+    width: 100%;
     max-width: 80%;
     background-color: white;
     padding: 25px 25px;
     padding-bottom: 3%;
-    height: fit-content;
+    /* height: fit-content; */
+    margin-bottom: 50px;
 }
 
 
@@ -34,7 +34,6 @@
 }
 
 .cart-background {
-    font-family: "Amazon Ember", sans-serif;
     background: #eaeded;
     height: 75vh;
     width: 100%;
