--- a/frontend/src/components/CheckoutPage/Checkout.css
+++ b/frontend/src/components/CheckoutPage/Checkout.css
@@ -78,3 +78,14 @@
 display: flex;
 justify-content: space-between;
 }
+
+.checkout-links-container {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+}
