--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -28,7 +28,7 @@
     box-shadow: 0px 15px 35px #888888;
     margin: 50px 20px;
     transition: all 0.5s ease-in-out;
-    top: -300px;
+    bottom: 300px;
 
 }
 
@@ -85,3 +85,12 @@
     transition: all 0.5s ease-in-out;
 }  
 
+.recommendations {
+    width: 100%;
+        max-width: 1500px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    margin-top: -330px;
+}
