--- a/frontend/src/components/Products/ProductShowPage/ProductShowPage.css
+++ b/frontend/src/components/Products/ProductShowPage/ProductShowPage.css
@@ -28,7 +28,6 @@
     margin-left: 7%;
     margin-right: 8%;
     width: 30%;
-
 }
 
 .product-name {
@@ -270,4 +269,11 @@ line-height: 24px;
     font-size: 14px;
     line-height: 20px;
     color: #007185;
+}
+
+.rating-or-ratings {
+    font-size: 14px;
+    line-height: 20px;
+    color: #007185;
+    padding-left: 4px;
 }
