add for featured linkedin

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,6 +2,15 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta property="og:title" content="Project Title" />
+    <meta property='og:image' content="<%= image_url('project_pic.png') %>"/>
+    <meta property="og:description"
+      content="Horizon is a full-stack e-commerce application that allows users to browse available products, add them to their cart, and leave reviews. Built as a clone of the world's largest e-commerce website, Amazon, Horizon provides a familiar shopping experience that users are already comfortable with."
+    />
+    <meta property="og:url"
+      content="https://horizon-v6ys.onrender.com/"
+    />
+
     <style>
       /* Email styles need to be inline */
     </style>
