--- a/frontend/src/components/SignupFormPage/SignUpForm.css
+++ b/frontend/src/components/SignupFormPage/SignUpForm.css
@@ -1,5 +1,4 @@
 .signup-logo {
-    /* margin-top: 20px; */
     object-fit: contain;
     width: 130px;
 }
@@ -8,7 +7,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 20px; */
     height: fit-content
 }
 
@@ -85,10 +83,12 @@
 }
 
 .signup-form-errors {
-    display: block;
+    /* display: block; */
+    display: flex;
     color: red;
-    margin-bottom: 20px;
-    font-size: 10px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    font-size: 14px;
 }
 
 .signup-form-button {
@@ -114,7 +114,6 @@
     background-image: linear-gradient(rgb(236, 213, 158), rgb(219, 178, 77));
 }
 
-
 .have-account {
     font-size: 13px;
 
@@ -137,3 +136,4 @@
     background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
     content: "";
 }
+
